--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -140,7 +140,7 @@ header p {
     font: 600 12px/15px Poppins;
     letter-spacing: 0.24px;
     color: #191919;
-    padding-bottom: 10px;
+    padding-top: 10px;
 }
 
 .ReactTitle {
